feat(preventive-works): добавлен обработчик POST для добавления новой профилактической работы Добавлена документация к нему Исправлена функция AddNewPreventiveWork, теперь сервис добавляется по имени, а не id
